[gd_scene load_steps=41 format=2]

[ext_resource path="res://assets/calculator_app_sprites/calculator_app_numbers/placehoder_operator.png" type="Texture" id=1]
[ext_resource path="res://assets/calculator_app_sprites/calculator_app_buttons/9_button.png" type="Texture" id=2]
[ext_resource path="res://assets/calculator_app_sprites/calculator_app_buttons/7_button.png" type="Texture" id=3]
[ext_resource path="res://assets/calculator_app_sprites/calculator_app_buttons/4_button_pressed.png" type="Texture" id=4]
[ext_resource path="res://assets/calculator_app_sprites/calculator_app_buttons/5_button.png" type="Texture" id=5]
[ext_resource path="res://assets/calculator_app_sprites/calculator_app_buttons/8_button.png" type="Texture" id=6]
[ext_resource path="res://assets/calculator_app_sprites/calculator_app_buttons/8_button_pressed.png" type="Texture" id=7]
[ext_resource path="res://assets/calculator_app_sprites/calculator_app_template.png" type="Texture" id=8]
[ext_resource path="res://assets/calculator_app_face.png" type="Texture" id=9]
[ext_resource path="res://assets/calculator_app_sprites/calculator_app_numbers/placeholder_number.png" type="Texture" id=10]
[ext_resource path="res://assets/calculator_app_sprites/calculator_app_buttons/9_button_pressed.png" type="Texture" id=11]
[ext_resource path="res://assets/calculator_app_sprites/calculator_app_buttons/7_button_pressed.png" type="Texture" id=12]
[ext_resource path="res://assets/calculator_app_sprites/calculator_app_buttons/4_button.png" type="Texture" id=13]
[ext_resource path="res://assets/calculator_app_sprites/calculator_app_buttons/dot_button_pressed.png" type="Texture" id=14]
[ext_resource path="res://assets/calculator_app_sprites/calculator_app_buttons/clear_button.png" type="Texture" id=15]
[ext_resource path="res://assets/calculator_app_sprites/calculator_app_buttons/3_button_pressed.png" type="Texture" id=16]
[ext_resource path="res://assets/calculator_app_sprites/calculator_app_buttons/0_button.png" type="Texture" id=17]
[ext_resource path="res://assets/calculator_app_sprites/calculator_app_buttons/0_button_pressed.png" type="Texture" id=18]
[ext_resource path="res://assets/calculator_app_sprites/calculator_app_buttons/dot_button.png" type="Texture" id=19]
[ext_resource path="res://assets/calculator_app_sprites/calculator_app_buttons/3_button.png" type="Texture" id=20]
[ext_resource path="res://assets/calculator_app_sprites/calculator_app_buttons/5_button_pressed.png" type="Texture" id=21]
[ext_resource path="res://assets/calculator_app_sprites/calculator_app_buttons/6_button.png" type="Texture" id=22]
[ext_resource path="res://assets/calculator_app_sprites/calculator_app_buttons/6_button_pressed.png" type="Texture" id=23]
[ext_resource path="res://assets/calculator_app_sprites/calculator_app_buttons/1_button.png" type="Texture" id=24]
[ext_resource path="res://assets/calculator_app_sprites/calculator_app_buttons/1_button_pressed.png" type="Texture" id=25]
[ext_resource path="res://assets/calculator_app_sprites/calculator_app_buttons/2_button_pressed.png" type="Texture" id=26]
[ext_resource path="res://assets/calculator_app_sprites/calculator_app_buttons/2_button.png" type="Texture" id=27]
[ext_resource path="res://assets/calculator_app_sprites/calculator_app_buttons/times_button.png" type="Texture" id=28]
[ext_resource path="res://assets/calculator_app_sprites/calculator_app_buttons/equal_button_pressed.png" type="Texture" id=29]
[ext_resource path="res://assets/calculator_app_sprites/calculator_app_buttons/divide_button_pressed.png" type="Texture" id=30]
[ext_resource path="res://assets/calculator_app_sprites/calculator_app_buttons/clear_button_pressed.png" type="Texture" id=31]
[ext_resource path="res://assets/calculator_app_sprites/calculator_app_buttons/minus_button.png" type="Texture" id=32]
[ext_resource path="res://assets/calculator_app_sprites/calculator_app_buttons/pulse_button_pressed.png" type="Texture" id=33]
[ext_resource path="res://assets/calculator_app_sprites/calculator_app_buttons/pulse_button.png" type="Texture" id=34]
[ext_resource path="res://assets/calculator_app_sprites/calculator_app_buttons/divide_button.png" type="Texture" id=35]
[ext_resource path="res://assets/calculator_app_sprites/calculator_app_buttons/minus_button_pressed.png" type="Texture" id=36]
[ext_resource path="res://assets/calculator_app_sprites/calculator_app_buttons/equal_button.png" type="Texture" id=37]
[ext_resource path="res://assets/calculator_app_sprites/calculator_app_buttons/times_button_pressed.png" type="Texture" id=38]
[ext_resource path="res://src/AppCalculator.gd" type="Script" id=39]
[ext_resource path="res://sounds/poketch_button_small_beep.mp3" type="AudioStream" id=40]

[node name="AppCalculator" type="Node2D"]
script = ExtResource( 39 )

[node name="CalculatorFace" type="Sprite" parent="."]
position = Vector2( 112, 96 )
texture = ExtResource( 9 )

[node name="Template" type="Sprite" parent="."]
visible = false
position = Vector2( 112, 96 )
texture = ExtResource( 8 )

[node name="Digit0" type="Sprite" parent="."]
position = Vector2( 49.5269, 32.5337 )
texture = ExtResource( 10 )

[node name="Digit1" type="Sprite" parent="."]
position = Vector2( 65.51, 32.534 )
texture = ExtResource( 10 )

[node name="Digit2" type="Sprite" parent="."]
position = Vector2( 81.493, 32.534 )
texture = ExtResource( 10 )

[node name="Digit3" type="Sprite" parent="."]
position = Vector2( 97.519, 32.534 )
texture = ExtResource( 10 )

[node name="Digit4" type="Sprite" parent="."]
position = Vector2( 113.508, 32.534 )
texture = ExtResource( 10 )

[node name="Digit5" type="Sprite" parent="."]
position = Vector2( 129.513, 32.534 )
texture = ExtResource( 10 )

[node name="Digit6" type="Sprite" parent="."]
position = Vector2( 145.517, 32.534 )
texture = ExtResource( 10 )

[node name="Digit7" type="Sprite" parent="."]
position = Vector2( 161.511, 32.534 )
texture = ExtResource( 10 )

[node name="Digit8" type="Sprite" parent="."]
position = Vector2( 177.514, 32.534 )
texture = ExtResource( 10 )

[node name="Digit9" type="Sprite" parent="."]
position = Vector2( 193.515, 32.534 )
texture = ExtResource( 10 )

[node name="Operator" type="Sprite" parent="."]
position = Vector2( 32.4916, 31.5065 )
texture = ExtResource( 1 )

[node name="Buttons" type="Node2D" parent="."]

[node name="7Button" type="TextureButton" parent="Buttons"]
margin_left = 31.5235
margin_top = 48.4343
margin_right = 61.5235
margin_bottom = 78.4343
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 12 )

[node name="8Button" type="TextureButton" parent="Buttons"]
margin_left = 64.3794
margin_top = 48.4209
margin_right = 94.3794
margin_bottom = 78.4209
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )

[node name="9Button" type="TextureButton" parent="Buttons"]
margin_left = 96.7141
margin_top = 47.5802
margin_right = 126.714
margin_bottom = 77.5802
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 11 )

[node name="5Button" type="TextureButton" parent="Buttons"]
margin_left = 64.0
margin_top = 81.0
margin_right = 94.0
margin_bottom = 111.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 21 )

[node name="6Button" type="TextureButton" parent="Buttons"]
margin_left = 97.0
margin_top = 81.0
margin_right = 127.0
margin_bottom = 111.0
texture_normal = ExtResource( 22 )
texture_pressed = ExtResource( 23 )

[node name="4Button" type="TextureButton" parent="Buttons"]
margin_left = 32.3928
margin_top = 80.7737
margin_right = 62.3928
margin_bottom = 110.774
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 4 )

[node name="1Button" type="TextureButton" parent="Buttons"]
margin_left = 32.3246
margin_top = 112.639
margin_right = 62.3246
margin_bottom = 142.639
texture_normal = ExtResource( 24 )
texture_pressed = ExtResource( 25 )

[node name="2Button" type="TextureButton" parent="Buttons"]
margin_left = 64.3123
margin_top = 113.051
margin_right = 94.3123
margin_bottom = 143.051
texture_normal = ExtResource( 27 )
texture_pressed = ExtResource( 26 )

[node name="3Button" type="TextureButton" parent="Buttons"]
margin_left = 96.6922
margin_top = 113.438
margin_right = 126.692
margin_bottom = 143.438
texture_normal = ExtResource( 20 )
texture_pressed = ExtResource( 16 )

[node name="0Button" type="TextureButton" parent="Buttons"]
margin_left = 32.4966
margin_top = 144.756
margin_right = 94.4966
margin_bottom = 174.756
texture_normal = ExtResource( 17 )
texture_pressed = ExtResource( 18 )

[node name="DotButton" type="TextureButton" parent="Buttons"]
margin_left = 96.6309
margin_top = 145.271
margin_right = 126.631
margin_bottom = 175.271
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 14 )

[node name="ClearButton" type="TextureButton" parent="Buttons"]
margin_left = 128.605
margin_top = 48.2843
margin_right = 190.605
margin_bottom = 78.2843
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 31 )

[node name="PulseButton" type="TextureButton" parent="Buttons"]
margin_left = 128.573
margin_top = 80.5191
margin_right = 158.573
margin_bottom = 110.519
texture_normal = ExtResource( 34 )
texture_pressed = ExtResource( 33 )

[node name="MinusButton" type="TextureButton" parent="Buttons"]
margin_left = 160.716
margin_top = 81.4556
margin_right = 190.716
margin_bottom = 111.456
texture_normal = ExtResource( 32 )
texture_pressed = ExtResource( 36 )

[node name="TimesButton" type="TextureButton" parent="Buttons"]
margin_left = 128.567
margin_top = 113.299
margin_right = 158.567
margin_bottom = 143.299
texture_normal = ExtResource( 28 )
texture_pressed = ExtResource( 38 )

[node name="DivideButton" type="TextureButton" parent="Buttons"]
margin_left = 160.726
margin_top = 112.597
margin_right = 190.726
margin_bottom = 142.597
texture_normal = ExtResource( 35 )
texture_pressed = ExtResource( 30 )

[node name="EqualButton" type="TextureButton" parent="Buttons"]
margin_left = 128.528
margin_top = 144.677
margin_right = 190.528
margin_bottom = 174.677
texture_normal = ExtResource( 37 )
texture_pressed = ExtResource( 29 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 40 )

[connection signal="pressed" from="Buttons/7Button" to="." method="_on_7Button_pressed"]
[connection signal="pressed" from="Buttons/8Button" to="." method="_on_8Button_pressed"]
[connection signal="pressed" from="Buttons/9Button" to="." method="_on_9Button_pressed"]
[connection signal="pressed" from="Buttons/5Button" to="." method="_on_5Button_pressed"]
[connection signal="pressed" from="Buttons/6Button" to="." method="_on_6Button_pressed"]
[connection signal="pressed" from="Buttons/4Button" to="." method="_on_4Button_pressed"]
[connection signal="pressed" from="Buttons/1Button" to="." method="_on_1Button_pressed"]
[connection signal="pressed" from="Buttons/2Button" to="." method="_on_2Button_pressed"]
[connection signal="pressed" from="Buttons/3Button" to="." method="_on_3Button_pressed"]
[connection signal="pressed" from="Buttons/0Button" to="." method="_on_0Button_pressed"]
[connection signal="pressed" from="Buttons/DotButton" to="." method="_on_DotButton_pressed"]
[connection signal="pressed" from="Buttons/ClearButton" to="." method="_on_ClearButton_pressed"]
[connection signal="pressed" from="Buttons/PulseButton" to="." method="_on_PulseButton_pressed"]
[connection signal="pressed" from="Buttons/MinusButton" to="." method="_on_MinusButton_pressed"]
[connection signal="pressed" from="Buttons/TimesButton" to="." method="_on_TimesButton_pressed"]
[connection signal="pressed" from="Buttons/DivideButton" to="." method="_on_DivideButton_pressed"]
[connection signal="pressed" from="Buttons/EqualButton" to="." method="_on_EqualButton_pressed"]
